force-app/main/default/objects/ObligationRule__c/ObligationRule__c.object-meta.xml
<CustomObject>
    <description>This object will be used to hold the information regarding each Obligation key against its category or Agreement Type</description>
    <label>Obligation Rule</label>
    <nameField>
        <displayFormat>OCK-{0000}</displayFormat>
        <label>Obligation Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Obligation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>