force-app/main/default/objects/ObligationRule__c/fields/AgreementType__c.field-meta.xml
<CustomField>
    <fullName>AgreementType__c</fullName>
    <description>This field will be used to store the record types of agreements</description>
    <label>Agreement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>