force-app/main/default/objects/ObligationRule__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>This field will hold the actual key value to be searched or looked upon</description>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>