force-app/main/default/objects/ObligationRule__c/fields/KeySearchRequired__c.field-meta.xml
<CustomField>
    <fullName>KeySearchRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to decide whether the key search is required or not. If yes, it will search for the key with the Obligation Category values. If not, it will consider Agreement Type as the key value</description>
    <label>Key Search Required?</label>
    <type>Checkbox</type>
</CustomField>