force-app/main/default/objects/ObligationRule__c/fields/ObligationCategoryValues__c.field-meta.xml
<CustomField>
    <fullName>ObligationCategoryValues__c</fullName>
    <description>This field will have comma separated values of the Obligation categories</description>
    <label>Obligation Category Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>